Blender2.8 crashed when push transformation manipulator's rotate button #51143

Closed
opened 2017-04-07 05:30:44 +02:00 by xueke pei · 7 comments
Member

System Information
macOS 10.12.4 intel iris

Blender Version
Broken: 2.80 115a889

Short description of error

Blender2.8 crashed when push transformation manipulator's rotate button in 3D view header bar.
but rest two button(translate&scale) with no problem.

Exact steps for others to reproduce the error

  • open blender
  • select any object in 3D view
  • active transformation manipulator in 3D view header bar
  • select rotate icon button
  • crash
**System Information** macOS 10.12.4 intel iris **Blender Version** Broken: 2.80 115a889 **Short description of error** Blender2.8 crashed when push transformation manipulator's rotate button in 3D view header bar. but rest two button(translate&scale) with no problem. **Exact steps for others to reproduce the error** - open blender - select any object in 3D view - active transformation manipulator in 3D view header bar - select rotate icon button - crash
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @xuekepei

Added subscriber: @xuekepei
Member

Added subscriber: @MikeErwin

Added subscriber: @MikeErwin
Member

GPU_SHADER_CLIPPED_UNIFORM_COLOR fails to compile because of undefined gl_ClipDistance.

GPU_SHADER_CLIPPED_UNIFORM_COLOR fails to compile because of undefined gl_ClipDistance.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Mike Erwin self-assigned this 2017-04-07 09:15:09 +02:00
Member

Thanks for the report @xuekepei, it should be fixed now. It looks a little different on Mac now, but will be back to normal by the time 2.8 ships!

Thanks for the report @xuekepei, it should be fixed now. It looks a little different on Mac now, but will be back to normal by the time 2.8 ships!
Author
Member

Thanks ,it works fine after git pull. waiting for 2.8 shipping time!

Thanks ,it works fine after git pull. waiting for 2.8 shipping time!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51143
No description provided.